jilles      2006/09/12 23:59:27 UTC	(20060912-6365)
  Log:
  Replace TS5ow in ctcp version replies with the protocol module name.
  TS5ow is often wrong (we do TS6 or a non-TSora protocol) and only
  really meaningful in a server /version.
  

  Changes:	Modified:
  +3 -2		trunk/src/ctcp-common.c (File Modified) 


pippijn     2006/09/12 23:44:21 UTC	(20060912-6363)
  Log:
  Added '@' to the possible fantasy command prefixes.
  

  Changes:	Modified:
  +1 -1		trunk/src/ptasks.c (File Modified) 


pippijn     2006/09/12 23:22:07 UTC	(20060912-6361)
  Log:
  Added check in handle_message that checks, if fantasy commands are enabled,
  whether the message in the channel really has the potential to be a command.
  

  Changes:	Modified:
  +0 -2		trunk/TODO (File Modified) 
  +9 -0		trunk/src/ptasks.c (File Modified) 


pippijn     2006/09/12 23:18:15 UTC	(20060912-6359)
  Log:
  Fixed ctcp handling.
  

  Changes:	Modified:
  +1 -1		trunk/include/common-ctcp.h (File Modified) 
  +1 -1		trunk/modules/chanserv/main.c (File Modified) 
  +1 -1		trunk/modules/global/main.c (File Modified) 
  +1 -1		trunk/modules/helpserv/main.c (File Modified) 
  +1 -1		trunk/modules/memoserv/main.c (File Modified) 
  +1 -1		trunk/modules/nickserv/main.c (File Modified) 
  +1 -1		trunk/modules/operserv/main.c (File Modified) 
  +3 -1		trunk/modules/saslserv/main.c (File Modified) 
  +1 -1		trunk/modules/userserv/main.c (File Modified) 
  +7 -7		trunk/src/ctcp-common.c (File Modified) 


jilles      2006/09/12 22:44:37 UTC	(20060912-6357)
  Log:
  HTTP Server header should be <product>/<version>
  not <product> <version>.
  

  Changes:	Modified:
  +1 -1		trunk/src/xmlrpc.c (File Modified) 


jilles      2006/09/11 15:15:47 UTC	(20060911-6355)
  Log:
  Get rid of unnecessary and unused pos argument in sendq_add().
  (In the old sendq_add(), it caused an initial part of the
  given buffer to be copied but not sent.)
  

  Changes:	Modified: