@@ -4,7 +4,7 @@
  *
  * Datastream query stuff.
  *
- * $Id: org.atheme.claro.base.datastream 6355 2006-09-11 15:15:47Z jilles $
+ * $Id: org.atheme.claro.base.datastream 6369 2006-09-13 14:50:12Z jilles $
  */
 #ifndef __CLARODATASTREAM
 #define __CLARODATASTREAM
@@ -12,6 +12,12 @@
 E void sendq_add(connection_t *cptr, char *buf, int len);
 E void sendq_flush(connection_t *cptr);
 E boolean_t sendq_nonempty(connection_t *cptr);
+
+E int recvq_length(connection_t *cptr);
+E void recvq_put(connection_t *cptr);
+E int recvq_get(connection_t *cptr, char *buf, int len);
+E int recvq_getline(connection_t *cptr, char *buf, int len);
+
 E void sendqrecvq_free(connection_t *cptr);
 
 #endif
